c/examples/writing-a-c-compiler-tests/tests/chapter_1/invalid_parse/missing_type.c
// note: in older versions of C this would be valid
// and return type would default to 'int'
// GCC/Clang will compile it (with a warning)
// for backwards compatibility
main(void) {
    return 0;
}